Increase width for description title to avoid overlapping with the magma village image

--- a/assets/stylesheets/config/mobile/android/_accommodation.css.scss
+++ b/assets/stylesheets/config/mobile/android/_accommodation.css.scss
@@ -40,7 +40,8 @@
               top: 0;
               left: 0;
               &:last-child{
-                left: 43%;
+                left: 41%;
+                width: 190px;
               }
             }
           }
@@ -104,7 +105,8 @@
               margin-left: 20%;
             }
             span:last-child{
-              left: 33%;
+              left: 31%;
+              width: 149px;
             }
           }
 
